// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundary should call captureException 1`] = `
<ErrorBoundary
  captureException={
    [MockFunction] {
      "calls": Array [
        Array [
          [Error: Test error],
          Object {
            "componentStack": "
    in FailedComponent
    in ErrorBoundary (created by WrapperComponent)
    in WrapperComponent",
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
/>
`;

exports[`ErrorBoundary should render children component 1`] = `
<ErrorBoundary>
  <div>
    Normal component
  </div>
</ErrorBoundary>
`;

exports[`ErrorBoundary should render fallback component 1`] = `
<ErrorBoundary
  fallback={
    <div>
      Fallback
    </div>
  }
>
  <div>
    Fallback
  </div>
</ErrorBoundary>
`;

exports[`SafeSuspense should render w/o props 1`] = `
<Suspense
  fallback={null}
>
  <ErrorBoundary
    fallback={null}
  >
    <div>
      Normal component
    </div>
  </ErrorBoundary>
</Suspense>
`;

exports[`SafeSuspense should render with props 1`] = `
<Suspense
  fallback={
    <div>
      Fallback
    </div>
  }
>
  <ErrorBoundary
    captureException={[MockFunction]}
    fallback={
      <div>
        Fallback
      </div>
    }
  >
    <div>
      Normal component
    </div>
  </ErrorBoundary>
</Suspense>
`;
